k8s/mysql/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysql-ingress
spec:
  rules:
    - host: "mysql.michiko.praise.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mysql-service
                port:
                  number: 13306
